# codeccomp

./: Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: gst_issues.md  help.md  setup.ps1
src/: compositor.rs  main.rs  metrics.rs  pipeline.rs  settings.rs  status.rs  ui.rs
