[package]
name = "codeccomp"
version = "0.1.0"
authors = ["Ruben Gonzalez <rubenrua@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }
serde_derive = "1.0"
serde = "1.0"
gst-plugin-originalbuffer = "0.13"
human_bytes = { version = "0.4", default-features = false }

[dependencies.gst]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
features = ["v1_24"]
package="gstreamer"

[dependencies.gst_video]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
features = ["v1_24"]
package="gstreamer-video"

[features]
expensive_tests = []