[package]
name = "codeccomp"
version = "0.1.0"
authors = ["Ruben Gonzalez <rubenrua@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }
serde_derive = "1.0"
serde = "1.0"
human_bytes = { version = "0.4", default-features = false }
once_cell = "1.21.1"

[dependencies.gst]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
branch = "main"
features = ["v1_24"]
package = "gstreamer"

[dependencies.gst_video]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
branch = "main"
features = ["v1_24"]
package = "gstreamer-video"

[dependencies.gstoriginalbuffer]
git = "https://gitlab.freedesktop.org/rgonzalez/gst-plugins-rs.git"
branch = "pub_originalbuffermeta"
package = "gst-plugin-originalbuffer"

[dependencies.rust_vmaf]
git = "https://github.com/rgonzalezfluendo/rust-vmaf.git"
branch = "master"
package = "rust-vmaf"

[dependencies.rust_vmaf_sys]
git = "https://github.com/rgonzalezfluendo/rust-vmaf.git"
branch = "master"
features = ["static-link"]
package = "rust-vmaf-sys"


[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }

[features]
expensive_tests = []
